# pywhats

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
examples/: echo.py  pair.py  pair_and_echo.py
proto/: README.md  client_payload.proto  companion_reg.proto  e2e.proto  handshake.proto  history_sync.proto  sender_key.proto  server_sync.proto  sync_action.proto  whisper.proto
scripts/: gen_proto.sh
src/pywhats/: __init__.py  client.py  errors.py  events.py  history.py  pairing.py  store.py  version.py
src/pywhats/appstate/: __init__.py  crypto.py  events.py  fetch.py  keys.py  lthash.py  patches.py  store.py
src/pywhats/binary/: __init__.py  decoder.py  encoder.py  jid.py  node.py  tokens.py
src/pywhats/media/: __init__.py  crypto.py  download.py  upload.py
src/pywhats/messaging/: __init__.py  activator.py  addressing.py  group.py  ib.py  (+8 more)
tests/: test_activator.py  test_appstate_crypto.py  test_appstate_events.py  test_appstate_fetch.py  test_appstate_keys.py  test_appstate_patches.py  test_appstate_store.py  test_binary.py  test_crypto.py  test_fakeserver_appstate.py  test_fakeserver_appstate_sync.py  test_fakeserver_edits.py  test_fakeserver_failure.py  test_fakeserver_groups.py  test_fakeserver_history.py  test_fakeserver_keepalive.py  test_fakeserver_lid.py  test_fakeserver_login.py  test_fakeserver_media.py  test_fakeserver_messaging.py  test_fakeserver_persistence.py  test_fakeserver_prekey.py  test_fakeserver_presence.py  test_fakeserver_reactions.py  test_fakeserver_replies.py  test_fakeserver_server_iq.py  test_group.py  test_history.py  test_ib.py  test_identity_store.py  test_lid_map.py  test_media_crypto.py  test_media_download.py  test_media_upload.py  test_noise.py  test_padding.py  test_pairing.py  test_prekey_refill.py  test_prekey_upload.py  test_presence.py  (+12 more)
tests/fakeserver/: __init__.py  factories.py  noise.py  server.py
(+27 files in other folders)
