[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "pywhats"
version = "0.2.0"
description = "Async Python client for the WhatsApp multi-device protocol"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Sanjay Ramadugu" }]
keywords = ["whatsapp", "messaging", "multi-device", "signal-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "websockets>=13.0",
    "protobuf>=7.35",
    "cryptography>=43.0",
    "qrcode[pil]>=7.4",
]

[project.optional-dependencies]
signal = [
    "signal-protocol>=0.2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "ruff>=0.6",
    "mypy>=1.11",
    "grpcio-tools>=1.65",
]

[project.urls]
Homepage = "https://github.com/sanjay3290/pywhats"
Issues = "https://github.com/sanjay3290/pywhats/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pywhats"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/pywhats/proto/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
markers = [
    "network: tests that require network access to real external services (skipped by default)",
]
addopts = "-m 'not network'"

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["src/pywhats/proto/"]

[[tool.mypy.overrides]]
module = ["qrcode.*", "websockets.*", "pywhats.proto.*"]
ignore_missing_imports = true
